--- a/src/features/Combo/Combo.css
+++ b/src/features/Combo/Combo.css
@@ -17,3 +17,18 @@
 .combo-content::-webkit-scrollbar-track {
   border-radius: 5px;
 }
+
+.sidebar-scroll::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+  border-radius: 5px;
+  background-color: rgb(232, 227, 227);
+}
+
+.sidebar-scroll::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+.sidebar-scroll::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
