--- a/src/components/Common/Invoice/Invoice.css
+++ b/src/components/Common/Invoice/Invoice.css
@@ -25,7 +25,6 @@ body {
 .address {
   margin-top: 150px;
   font-size: 13px;
-  font-family: 'oswald', sans-serif;
 }
 .shipping-info-head {
   column-count: 4;
@@ -34,13 +33,11 @@ body {
 .shipping-info-head h6 {
   font-size: 20px;
   margin-top: 0px;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-info-head p {
   font-size: 15px;
   margin-top: 5px !important;
   font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-info-1 {
   column-count: 4;
@@ -50,13 +47,11 @@ body {
 .shipping-info-1 h6 {
   font-size: 20px;
   margin-top: 0px;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-info-1 p {
   font-size: 15px;
   margin-top: 5px !important;
   font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-info-2 {
   column-count: 4;
@@ -66,13 +61,11 @@ body {
 .shipping-info-2 h6 {
   font-size: 20px;
   margin-top: 0px;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-info-2 p {
   font-size: 15px;
   margin-top: 5px !important;
   font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-info-3 {
   column-count: 4;
@@ -82,13 +75,11 @@ body {
 .shipping-info-3 h6 {
   font-size: 20px;
   margin-top: 0px;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-info-3 p {
   font-size: 15px;
   margin-top: 5px !important;
   font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 
 .main-strip {
@@ -100,7 +91,6 @@ body {
   font-size: 25px;
   color: #212e59;
   margin-top: 0px;
-  font-family: 'Teko', sans-serif;
 }
 .top1 {
   margin-bottom: -15px;
@@ -120,7 +110,6 @@ body {
   font-size: 17px;
   margin-top: 5px !important;
   font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-2 {
   column-count: 4;
@@ -131,7 +120,6 @@ body {
   font-size: 17px;
   margin-top: 5px !important;
   font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-3 {
   column-count: 4;
@@ -142,7 +130,6 @@ body {
   font-size: 17px;
   margin-top: 5px !important;
   font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 
 total {
@@ -159,19 +146,15 @@ total {
 .shipping-total p {
   font-size: 17px;
   margin-top: 5px !important;
-  font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-total-1 {
   column-count: 2;
-  margin-top: -10px;
+  margin-top: -5px;
 }
 
 .shipping-total-1 p {
   font-size: 20px;
   margin-top: 5px !important;
-  font-weight: 100;
-  font-family: 'Teko', sans-serif;
 }
 .shipping-total-2 {
   column-count: 2;
@@ -181,7 +164,6 @@ total {
   font-size: 23px;
   color: #212e59;
   margin-top: 0px;
-  font-family: 'Teko', sans-serif;
 }
 
 .shipping-22 {
@@ -210,7 +192,6 @@ total {
   margin-top: 50px;
   line-height: 80px;
   vertical-align: middle;
-  font-family: 'Dancing Script', cursive;
   font-weight: 600;
   margin-left: 50px;
   font-size: 3.5rem;
@@ -270,4 +251,20 @@ total {
     margin-left: 430px;
     margin-top: 40px;
   }
+}
+.table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.table td,
+.table th {
+  border: 1px solid #333;
+  text-align: center;
+  padding: 8px;
+}
+
+.table tr:nth-child(even) {
+  background-color: #dddddd;
 }
